fixed paragraph alignment, added photo gallery css

--- a/CSS/Stromae.css
+++ b/CSS/Stromae.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+/* Background */
 body {
     background-image: linear-gradient(to bottom right, #ff47b7,#ffc2e7, #ebeb34);
      background-repeat: no-repeat;
    text-align: center;
  }
  
+/* Navigation */
 nav{
  display: center;
  font-family: "Roboto", sans-serif;
@@ -46,7 +48,7 @@ a:hover {
   color: yellow;
 }
 
-
+/* "This is" section */
 #name{
   color: #ffd6ef;
   margin-bottom: 15px;
@@ -61,11 +63,6 @@ h1{
   font-size: 3em;
   margin: 0;
 }
-
-p{
-  font-family: "Roboto", sans-serif;
-  font-weight: 200;
-}
  
 .banner {
   width: 95%;
@@ -78,6 +75,7 @@ p{
    margin: auto;
 }
  
+/* Paragraphs */
 p, h1, h2, a {
    color: white;
 }
@@ -85,11 +83,16 @@ p, h1, h2, a {
 h2{
     color:black;
     text-transform: uppercase;
-    font-size: 2em;
+    font-size: 3em;
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
+}
+
+p{
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
 }
 
 .section{
@@ -100,6 +103,48 @@ h2{
   margin-bottom: 0px;
 }
 
+.text{
+  text-align: left;
+  padding-right: 30px;
+  margin-top: 0px;
+}
+
+.textTwo{
+  text-align: right;
+  padding-left: 30px;
+}
+
+.para{
+  font-size: 1.5em;
+}
+
+/* Gallery */
+
+.gallery{
+  padding-right: 50px;
+  padding-left: 50px;
+}
+.gallery ul {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.gallery li {
+  height: 40vh;
+  flex-grow: 1;
+  padding: 0;
+}
+
+.gallery img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+  padding: 0;
+}
+
+/* Social Media and Footer */
 .socials{
    display: flex;
    flex-direction: row;
@@ -115,3 +160,12 @@ footer{
   width: 100%;
   text-align: left;
 }
+
+/* Media Queries */
+/* @media (max-width: 600px){
+  .video{
+    width: 320px;
+    height: 240px;
+  }
+} */
+
